# pixiv_api

./: app.py  cache.db  pyproject.toml
pixiv_api/: __init__.py
