[tool.poetry]
name = "pixiv-api"
version = "0.1.0"
description = "一个基于pixivpy的webapi"
authors = ["Expliyh <expliyh@outlook.com>"]
readme = "README.md"
packages = [{include = "pixiv_api"}]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pixivpy3 = "^3.7.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
